--- a/index.html
+++ b/index.html
@@ -58,26 +58,29 @@
             <div class="clients">
                 <div class="client">
                     <div class="client-image">
-                        <img src="./assets/client1.jpeg">
+                        <img src="images\client1.jpeg">
                     </div>
                     <p>
-                        REVIEW
+                        "I've had 10+ guitars in 20 years and I've only kept 2 of them and both of them are from Aaron.
+                            I'm extremely picky but my newest guitar is literally everything i wanted and plays better than 
+                            any name brand. Something unique I know no one else has!"
                     </p>
                     <div class="details">
-                        <h2>CLIENT</h2>
-                        <h4>CAREER</h4>
+                        <h2>Nicholas Bowen</h2>
+                        <h4>Nick Bowen Music</h4>
                     </div>
                 </div>
                 <div class="client">
                     <div class="client-image">
-                        <img src="./assets/client1.jpeg">
+                        <img src="images\client 2.jpeg">
                     </div>
                     <p>
-                        REVIEW
+                        "I would save this guitar from a burning building. I cherish it's unique design and beautiful
+                        craftsmanship. It plays so beautifully and Aaron is always great to work with. I love it so much."
                     </p>
                     <div class="details">
-                        <h2>CLIENT</h2>
-                        <h4>CAREER</h4>
+                        <h2>Jasmine Bailey</h2>
+                        <h4>Jasmine Bailey Music</h4>
                     </div>
                 </div>
                 <div class="client">
