--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <p>
                         "I've had 10+ guitars in 20 years and I've only kept 2 of them and both of them are from Aaron.
                             I'm extremely picky but my newest guitar is literally everything i wanted and plays better than 
-                            any name brand. Something unique I know no one else has!"
+                            any name brand!"
                     </p>
                     <div class="details">
                         <h2>Nicholas Bowen</h2>
